--- a/app/src/main/res/layout/content_meal_details.xml
+++ b/app/src/main/res/layout/content_meal_details.xml
@@ -75,7 +75,7 @@
             app:layout_constraintTop_toTopOf="@id/area_icon"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/area"
-            android:text="10€"
+            tools:text="10€"
             android:textSize="36sp"
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="wrap_content"
